fixed height contact page background, it was not showing properly on small screen celphones

--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,7 @@
 .bg-contact {
   background-image: url(./img/backMacuco2.jpg);
   opacity: 0.5;
+  min-height: 600px;
 }
 
 .bg-items {
